``` feat(asset): 添加V2资产管理和上传功能
- 添加V2存储配置，支持本地和OSS存储模式
- 实现资产库API，包括资产列表、详情、重命名、删除和恢复功能
- 实现知识库管理API，支持创建、更新、删除知识库及关联资产
- 实现分片上传控制器，支持大文件上传功能
- 集成Elasticsearch向量索引，用于文档语义检索
- 添加ClamAV文件扫描功能，确保上传文件安全
- 配置DashScope模型服务，支持Qwen系列AI能力
- 完善异常处理机制，提供统一的错误响应格式

该功能为V2版本的核心资产管理系统，支持文件上传、处理、索引和检索全流程。
```